# pycmor

./: .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .yamllint.yaml  CHANGELOG.rst  CLAUDE.md  Dockerfile.test  FIXTURE_USAGE.md  QUICK_START_CMIP7.md  README.rst  ROADMAP.rst  conftest.py  output.json  pyproject.toml
.github/workflows/: CI-publish.yaml  CI-test.yaml
doc/: cerberus_sphinx_ext.py  cmip7_configuration.rst  cmip7_controlled_vocabularies.rst  cmip7_interface.rst  conf.py  coordinate_bounds.rst  index.rst  infer_freq.rst  md  netcdf_chunking.rst  pycmor_building_blocks.rst  pycmor_fesom.rst  quickstart.rst  test_infrastructure.rst
examples/: .gitignore  chunking_example.yaml  cmip7-example.yaml  vertical_bounds_example.py
examples/01-default-unit-conversion/: cleanup.py  generate-metadata.sh  pycmor.slurm  units-example.yaml
examples/02-upward-ocean-mass-transport/: pycmor_wo_cellarea.slurm  wo_cellarea.py  wo_cellarea.yaml
examples/03-incorrect-units-in-source-files/: download-example-data.sh  incorrect_units.yaml
examples/04-multivariable-input-with-vertical-integration/: cleanup.py  multivariable_vertical_integration_example.yaml
src/pycmor/: cli.py  webapp.py
src/pycmor/core/: banner.py  calendar.py  cmorizer.py  config.py  controlled_vocabularies.py  factory.py  filecache.py  frequency.py  gather_inputs.py  infer_freq.py  logging.py  pipeline.py  resource_locator.py  rule.py  ssh_tunnel.py  utils.py  validate.py
src/pycmor/data_request/: __init__.py  cmip7_interface.py  collection.py  table.py  variable.py
src/pycmor/fesom_1p4/: load_mesh_data.py
src/pycmor/fesom_2p1/: regridding.py
src/pycmor/scripts/: update_dimensionless_mappings.py
src/pycmor/std_lib/: __init__.py  bounds.py  chunking.py  dataset_helpers.py  files.py  generic.py  global_attributes.py  setgrid.py  timeaverage.py  units.py  variable_attributes.py
tests/configs/: test_config_awicm_1p0_recom.yaml  test_config_awicm_1p0_recom_cmip7.yaml  test_config_cmip7.yaml  test_config_fesom_2p6_pimesh_cmip7.yaml  test_config_pi_uxarray_cmip7.yaml
tests/data/CV/CMIP6_CVs/: CMIP6_institution_id.json  CMIP6_license.json  CMIP6_required_global_attributes.json  CMIP6_source_id.json
tests/fixtures/: __init__.py  cmip7_test_data.py  config_files.py  configs.py  datasets.py  sample_rules.py  stub_generator.py
tests/fixtures/example_data/: awicm_recom.py  fesom_2p6_pimesh.py  pi_uxarray.py
tests/fixtures/stub_data/: awicm_1p0_recom.yaml  fesom_2p6_pimesh.yaml  pi_uxarray.yaml
tests/integration/: test_awicm_recom.py  test_basic_pipeline.py  test_cmip7_yaml_validation.py  test_fesom_2p6_pimesh_esm_tools.py  test_uxarray_pi.py
tests/meta/: test_h5py_threadsafe.py  test_pyfesom_load_mesh.py  test_xarray_open_mfdataset.py
tests/unit/: test_aux_files.py  test_bounds.py  test_calendar.py  test_chunking.py  test_cmip7_global_attributes.py  test_cmorizer.py  test_controlled_vocabularies.py  test_create_filepath.py  test_fesom.py  test_fesom_1p4_nodes_to_levels.py  test_filecache.py  test_files.py  test_find_eligible_input.py  test_frequency.py  test_global_attributes.py  test_infer_freq.py  test_resource_locator.py  test_savedataset.py  test_setgrid.py  test_time_bounds_offset.py  test_timeaverage.py  test_units.py  test_utils.py  test_variable_attributes.py  test_vertical_bounds.py
tests/unit/data_request/: test_cmip7_interface.py  test_variable.py
utils/: delete-tags.py  generate_test_stubs.py  reload-sphinx.py  run-pytest-in-docker.sh  run-pytest-on-levante.slurm
